# rust-gcp-pubsub

./: Cargo.toml  README.md
src/: client.rs  constants.rs  error.rs  lib.rs  topic.rs
src/presenters/: encoded_message.rs  publish_message.rs
